--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
   	<div class="container-fluid">
   	  <div class="container">
-  	    <nav class="navbar navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="90" height="92" alt=""/></a>
+  	    <nav class="navbar navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="index.html"><img src="logo.png" width="90" height="92" alt=""/></a>
   	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
   	      <div class="collapse navbar-collapse" id="navbarSupportedContent1">
   	        <ul class="navbar-nav mr-auto">
